--- a/News-Articles/Roobet-Mission-Uncrossable/index.html
+++ b/News-Articles/Roobet-Mission-Uncrossable/index.html
@@ -61,17 +61,24 @@
       }
     </script>
 
-    <!-- JSON-LD for Mission Uncrossable Game (Rich Snippet Eligible) -->
+    <!-- JSON-LD Product + Offer for Mission Uncrossable -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "VideoGame",
+        "@type": "Product",
         "name": "Mission Uncrossable",
         "description": "Mission Uncrossable is an exclusive Roobet game inspired by Crossy Road. Guide your chicken across busy roads, collect multipliers, and aim for wins up to $1,000,000. Adjustable difficulty and bet sizes from $0.01 to $100 per round.",
-        "url": "https://www.all4wins.com/News-Articles/Roobet-Mission-Uncrossable/",
         "image": "https://www.all4wins.com/img/news-banners/mission-unscrollable-topBanner.webp",
-        "gamePlatform": ["Browser", "Mobile"],
-        "genre": "Arcade",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Mission-Uncrossable/",
+        "category": "Arcade Game",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-Mission-Uncrossable/",
+          "price": "0.00",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "2024-08-01"
+        },
         "publisher": {
           "@type": "Organization",
           "@id": "https://www.all4wins.com/#organization",
@@ -89,7 +96,7 @@
         }
       }
     </script>
-    <!-- End JSON-LD for Mission Uncrossable Game -->
+    <!-- End JSON-LD Product + Offer for Mission Uncrossable -->
   </head>
   <body>
     <div id="news-background"></div>
